--- a/public/host.html
+++ b/public/host.html
@@ -540,13 +540,21 @@
   <script>
     const socket = io();
 
-    // Set join URL and QR code
-    const playUrl = window.location.origin + '/play';
-    document.getElementById('joinUrl').textContent = playUrl;
-    
-    // Generate QR code
-    const qrApiUrl = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(playUrl)}&bgcolor=ffffff&color=0a0b1e&margin=5`;
-    document.getElementById('joinQr').src = qrApiUrl;
+    // Fetch config to get the correct base URL
+    fetch('/api/config')
+      .then(res => res.json())
+      .then(config => {
+        const playUrl = config.baseUrl + '/play';
+        document.getElementById('joinUrl').textContent = playUrl;
+        const qrApiUrl = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(playUrl)}&bgcolor=ffffff&color=0a0b1e&margin=5`;
+        document.getElementById('joinQr').src = qrApiUrl;
+      })
+      .catch(() => {
+        const playUrl = window.location.origin + '/play';
+        document.getElementById('joinUrl').textContent = playUrl;
+        const qrApiUrl = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(playUrl)}&bgcolor=ffffff&color=0a0b1e&margin=5`;
+        document.getElementById('joinQr').src = qrApiUrl;
+      });
 
     function startAuction() {
       const duration = parseInt(document.getElementById('duration').value) || 10;
