Make auction duration references dynamic (not hardcoded 10 sec)

--- a/public/index.html
+++ b/public/index.html
@@ -391,7 +391,7 @@
       <div class="rules-list">
         <div class="rule">
           <span class="rule-icon">⏱️</span>
-          <span>When the auction starts, you have <strong>10 seconds</strong> to bid</span>
+          <span>When the auction starts, you have <strong>limited time</strong> to bid</span>
         </div>
         <div class="rule">
           <span class="rule-icon">👆</span>
