--- a/public/player.html
+++ b/public/player.html
@@ -569,7 +569,7 @@
     <p class="subtitle">Join as a DSP</p>
     
     <div class="rules-quick">
-      <div class="rule-item">⏱️ <strong>10 sec</strong> auction</div>
+      <div class="rule-item">⏱️ <strong>Timed</strong> auction</div>
       <div class="rule-item">👆 Tap = <strong>1 bid</strong></div>
       <div class="rule-item">🏆 Most bids <strong>wins!</strong></div>
     </div>
