Add health endpoint, max players limit, and memory cleanup
Features:
- /health endpoint for monitoring (uptime, players, round)
- MAX_PLAYERS limit (100) prevents server overload
- joinError event sent when game is full
- Periodic memory cleanup (every 60s) for stale data
- Graceful shutdown (SIGTERM/SIGINT) saves scores

Tests:
- Health endpoint structure test
- Max players limit logic test
- Memory cleanup logic tests

Total: 102 tests passing

--- a/public/player.html
+++ b/public/player.html
@@ -1016,6 +1016,12 @@
       document.getElementById('kickedOverlay').classList.add('active');
     });
 
+    socket.on('joinError', (data) => {
+      const overlay = document.getElementById('kickedOverlay');
+      overlay.querySelector('.kicked-text').textContent = data.message || 'Could not join the game';
+      overlay.classList.add('active');
+    });
+
     // Focus name input on load
     document.getElementById('playerName').focus();
   </script>
