Fix CSP blocking inline onclick handlers
Added scriptSrcAttr: ['unsafe-inline'] to Helmet CSP config
to allow onclick event handlers in HTML.

Also added socket connection debugging to host.html.

--- a/public/host.html
+++ b/public/host.html
@@ -569,8 +569,19 @@
 
     function startAuction() {
       const duration = parseInt(document.getElementById('duration').value) || 10;
+      console.log('Starting auction with duration:', duration);
+      console.log('Socket connected:', socket.connected);
       socket.emit('startAuction', { duration });
     }
+    
+    // Debug: Log socket connection status
+    socket.on('connect', () => {
+      console.log('✅ Socket connected:', socket.id);
+    });
+    
+    socket.on('connect_error', (err) => {
+      console.error('❌ Socket connection error:', err.message);
+    });
 
     function resetAuction() {
       socket.emit('resetAuction');
