--- a/public/display.html
+++ b/public/display.html
@@ -224,18 +224,23 @@
 
     .player-stats {
       display: flex;
-      gap: 1rem;
+      gap: 1.5rem;
+      margin-left: auto;
       font-family: 'Orbitron', sans-serif;
-      font-size: 0.85rem;
+      font-size: 0.9rem;
     }
 
     .player-stats .wins {
       color: var(--warning);
       font-weight: 700;
+      min-width: 50px;
+      text-align: right;
     }
 
     .player-stats .best {
       color: var(--primary);
+      min-width: 90px;
+      text-align: right;
     }
 
     .click-bar {
