--- a/public/host-login.html
+++ b/public/host-login.html
@@ -9,170 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/common.css">
-  <style>
-    :root {
-      --viooh-teal: #00C9A7;
-      --viooh-cyan: #00D4D4;
-      --viooh-purple: #6B3FA0;
-      --viooh-magenta: #E91E8C;
-      --viooh-navy: #0A0B1E;
-      --viooh-dark: #060714;
-      --primary: var(--viooh-teal);
-      --accent: var(--viooh-magenta);
-      --danger: #FF3366;
-    }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: 'Rajdhani', sans-serif;
-      background: var(--viooh-dark);
-      color: #e0e0e0;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .bg {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: -1;
-      background: 
-        radial-gradient(ellipse at 30% 20%, rgba(107, 63, 160, 0.15) 0%, transparent 50%),
-        radial-gradient(ellipse at 70% 80%, rgba(0, 201, 167, 0.1) 0%, transparent 50%),
-        var(--viooh-dark);
-    }
-
-    .login-card {
-      background: rgba(10, 11, 30, 0.95);
-      border: 1px solid rgba(0, 201, 167, 0.2);
-      border-radius: 20px;
-      padding: 3rem;
-      max-width: 400px;
-      width: 90%;
-      text-align: center;
-    }
-
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.5rem;
-      font-weight: 900;
-      background: linear-gradient(135deg, var(--primary), var(--accent));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 0.5rem;
-    }
-
-    .subtitle {
-      color: #888;
-      font-size: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    .lock-icon {
-      font-size: 4rem;
-      margin-bottom: 1.5rem;
-      opacity: 0.8;
-    }
-
-    .input-group {
-      margin-bottom: 1.5rem;
-    }
-
-    .input-group label {
-      display: block;
-      text-align: left;
-      margin-bottom: 0.5rem;
-      color: #aaa;
-      font-size: 0.9rem;
-    }
-
-    .pin-input {
-      width: 100%;
-      padding: 1rem 1.5rem;
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.5rem;
-      letter-spacing: 0.5rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.3);
-      border: 2px solid rgba(0, 201, 167, 0.3);
-      border-radius: 12px;
-      color: var(--primary);
-      outline: none;
-      transition: all 0.3s ease;
-    }
-
-    .pin-input:focus {
-      border-color: var(--primary);
-      box-shadow: 0 0 20px rgba(0, 201, 167, 0.2);
-    }
-
-    .pin-input.error {
-      border-color: var(--danger);
-      animation: shake 0.5s ease;
-    }
-
-    @keyframes shake {
-      0%, 100% { transform: translateX(0); }
-      25% { transform: translateX(-10px); }
-      75% { transform: translateX(10px); }
-    }
-
-    .btn {
-      width: 100%;
-      padding: 1rem 2rem;
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.1rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      background: linear-gradient(135deg, var(--primary), var(--viooh-cyan));
-      color: var(--viooh-dark);
-    }
-
-    .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 30px rgba(0, 201, 167, 0.3);
-    }
-
-    .btn:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-      transform: none;
-    }
-
-    .error-message {
-      color: var(--danger);
-      font-size: 0.9rem;
-      margin-top: 1rem;
-      min-height: 1.5rem;
-    }
-
-    .back-link {
-      display: block;
-      margin-top: 2rem;
-      color: #666;
-      text-decoration: none;
-      font-size: 0.9rem;
-    }
-
-    .back-link:hover {
-      color: var(--primary);
-    }
-
-    .viooh-badge {
-      margin-top: 2rem;
-      padding-top: 1.5rem;
-      border-top: 1px solid rgba(255,255,255,0.1);
-      font-size: 0.8rem;
-      color: #555;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/host-login.css">
 </head>
 <body>
   <div class="bg" aria-hidden="true"></div>
