--- a/public/host.html
+++ b/public/host.html
@@ -51,9 +51,9 @@
   </main>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logger.js"></script>
-  <script src="/js/utils.js"></script>
-  <script src="/js/host.js"></script>
+  <script src="/js/dist/logger.min.js"></script>
+  <script src="/js/dist/utils.min.js"></script>
+  <script src="/js/dist/host.min.js"></script>
 </body>
 </html>
 
