--- a/public/play.html
+++ b/public/play.html
@@ -82,10 +82,10 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/js/logger.js"></script>
-  <script src="/js/utils.js"></script>
-  <script src="/js/sound.js"></script>
-  <script src="/js/play.js"></script>
+  <script src="/js/dist/logger.min.js"></script>
+  <script src="/js/dist/utils.min.js"></script>
+  <script src="/js/dist/sound.min.js"></script>
+  <script src="/js/dist/play.min.js"></script>
 </body>
 </html>
 
